--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,21 +1,21 @@
-<center><%=image_tag "sos", class: ""%>  </center>
+<center><img src="/assets/images/sos.png"> </center>
 
 <div class="flexslider" id="flexslider" rel="external">
   <ul class="slides">
     <li>
-    	<%=image_tag "easy"%>
+    	<img src="/assets/images/easy.png">
     </li>
     <li>
-    	<%=image_tag "join"%>
+    	<img src="/assets/images/join.png">
     </li>
     <li>
-    	<%=image_tag "cont"%>
+    	<img src="/assets/images/cont.png">
     </li>
     <li>
-    	<%=image_tag "aspel"%>
+    	<img src="/assets/images/aspel.png">
     </li>
     <li>
-    	<%=image_tag "atime"%>
+    	<img src="/assets/images/atime.png">
     </li>
   </ul>
 </div>
