--- a/app/views/eventos/index.html.erb
+++ b/app/views/eventos/index.html.erb
@@ -54,6 +54,6 @@ sd
     <%= link_to "Regresar", eventos_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b"%>
   </div>
   <div class="col-md-4">
-    <%= image_tag("sos") %>
+    <img src="/assets/images/sos.png">
   </div>
 <%end%>
