--- a/app/views/eventos/show.html.erb
+++ b/app/views/eventos/show.html.erb
@@ -49,5 +49,5 @@
     <%= link_to "Regresar", eventos_path, "data-role" => "button","data-inline"=>"true","data-theme" =>"b"%>
   </div>
   <div class="col-md-4">
-    <%= image_tag("sos") %>
+    <img src="/assets/images/sos.png">
   </div> 
