--- a/app/views/parcial/_nav.html.erb
+++ b/app/views/parcial/_nav.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top color-header" role="navigation">		
  	<div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/"><%=image_tag("logo", "class"=>"logo")%></a>
+            <a class="navbar-brand" href="/"><img src="/assets/images/logo.png"></a>
                 <ul data-role="listview" data-inset="true" data-shadow="false" data-theme="b" class="menu_small">
 				  	<li data-role="collapsible" data-iconpos="right" data-inset="false">
 				    	<h2>SOS Software</h2>
