--- a/app/views/venta/show.html.erb
+++ b/app/views/venta/show.html.erb
@@ -2,7 +2,7 @@
   <%= link_to 'Editar', edit_ventum_path(@ventum),"data-role"=>"button","data-inline"=>"true"%>
 	<div class="col-md-12">
 		<div class="col-md-4 col-md-offset-3">
-	    	<%= image_tag("sos") %>
+	    	<img src="/assets/images/sos.png">
 	  	</div>
   	</div>
 	<div class="col-md-9">
