--- a/app/views/reports/create.html.erb
+++ b/app/views/reports/create.html.erb
@@ -1,6 +1,9 @@
 <h2 class="alert alert-danger text-center">Resumen de reporte</h2>
 <%= link_to ' Descargar Reporte',  create_report_path(request.parameters.merge({:format => :pdf})),"data-role" => "button","data-inline" => "true", "data-theme" => "b", "download"=>"fa-download", "data-ajax"=>"false"%>
 <%= link_to "Regresar", reports_path,"data-role" => "button","data-inline" => "true"%>
+<p>
+	La siguiente tabla muestra una previsualización del reporte real, asegurarse que tiene los datos deseados antes de descargar el pdf, la fecha mostrada representa la fecha en la que el usuario selecciono como inicio del proyecto (no representa la fecha de creación en el sistema)
+</p>
 <table class="table table-bordered ui-responsive" data-role="table">
     <thead>
       <tr>
